# lsp-types-required

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.zed/: settings.json
src/lsp_types_required/: lsp_client.py
src/zuban_lsp_playground/: main.py
