[project]
name = "lsp-types-required"
description = "LSP Types Required"
requires-python = ">=3.13"
license = {text = "MIT License"}
readme = "README.md"
authors = [
    {name = "Martijn Jacobs", email = "maerteijn@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
]
dynamic = ["version"]

dependencies = [
    "requests ~= 2.32",
    "pygls ~= 1.3",
    "jedi-language-server ~= 0.45",
    "zuban ~= 0.0.24",
    "ruff ~= 0.13"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.ignore = ["C408", "E501", "F405", "T201", "UP031"]
lint.select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "T20", # flake8-print
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.zuban]
python_executable = ".venv/bin/python"
check_untyped_defs = true

[project.scripts]
"lsp_client" =  "lsp_types_required.lsp_client:main"
